# wsize

./: .gitignore  Cargo.toml  build_dev.bat  build_exe.bat  pyproject.toml  run.bat
.cargo/: config.toml
src/: app.rs  lib.rs  main.rs  models.rs  parser.rs
src/models/: bank_data.rs  filter_type.rs  match_data.rs
wsize/: main.py
